--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,66 @@
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Courier New", monospace;
+
+}
+
+
+.content-container {
+  display: flex;
+  background-color: #CB997E; /*Antique Brass */
+  width: auto;
+  padding: 100px 50px 100px 50px;
+  justify-content: center;
+  flex-direction: column;
+
+}
+.content-container h1 {
+  font-weight: bold;
+  font-size: 100px;
+}
+
+.content-container h2 {
+  padding-top: 50px;
+  font-size: 60px;
+}
+
+.content-container h3 {
+  font-family: "Snell Roundhand", cursive;
+  font-size: 70px;
+}
+
+.quote p {
+  padding: 50px 20px 20px 50px;
+  font-size: 30px;
+  text-align: center;
+}
+
+
+.footer {
+  text-align: center;
+  padding-bottom:20px;
+  padding-top: 20px;
+  background-color: #DDBEA9 /* Desert Sand */
+}
+
+
+/* Mobile Styles */
+@media only screen and (max-width: 400px) {
+  body {
+
+  }
+}
+
+/* Tablet Styles */
+@media only screen and (min-width: 401px) and (max-width: 960px) {
+}
+
+
+
+/* Desktop Styles */
+@media only screen and (min-width: 961px) {
+
+}
