--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,13 @@
 
 .content-container {
   display: flex;
+  flex: wrap;
   background-color: #CB997E; /*Antique Brass */
   width: auto;
   padding: 100px 50px 100px 50px;
   justify-content: center;
   flex-direction: column;
+  width: auto;
 
 }
 .content-container h1 {
@@ -30,6 +32,7 @@
 .content-container h3 {
   font-family: "Snell Roundhand", cursive;
   font-size: 70px;
+
 }
 
 .quote p {
@@ -38,6 +41,76 @@
   text-align: center;
 }
 
+.top-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: auto;
+  margin: 50px;
+  padding: 30px;
+
+}
+
+.inspo {
+  background: #EDDCD2; /* champagne pink */
+  padding: 20px;
+  margin-right: 50px;
+  height: 900px;
+  width: 30%;
+}
+.suggestions {
+  background: #A5A58D;
+  padding: 20px;
+  height: 450px;
+  width: 30%;
+
+}
+.thoughtstream {
+  background-color: #DDBEA9; /* desert sand */
+  padding: 20px;
+  margin-left: 50px;
+  height: 900px;
+  width: 30%;
+
+}
+
+.bottom-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: auto;
+  height: auto;
+}
+
+.jpg-header {
+  text-align: center;
+}
+
+.jpg-img {
+  padding: 100px;
+}
+
+
+.clr{clear:both}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 10px 10px 10px 10px;
+}
+
+/* Create four equal columns that sits next to each other */
+.column {
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+}
+
+.column img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}
 
 .footer {
   text-align: center;
@@ -49,9 +122,7 @@
 
 /* Mobile Styles */
 @media only screen and (max-width: 400px) {
-  body {
 
-  }
 }
 
 /* Tablet Styles */
