--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,8 @@
 }
 
 .inspo {
+  flex-wrap: wrap;
+  margin-top: 50px;
   background: #EDDCD2; /* champagne pink */
   padding: 20px;
   margin-right: 50px;
@@ -59,6 +61,8 @@
   width: 30%;
 }
 .suggestions {
+  flex-wrap: wrap;
+  margin-top: 50px;
   background: #A5A58D;
   padding: 20px;
   height: 450px;
@@ -66,8 +70,10 @@
 
 }
 .thoughtstream {
+  flex-wrap: wrap;
   background-color: #DDBEA9; /* desert sand */
   padding: 20px;
+  margin-top: 50px;
   margin-left: 50px;
   height: 900px;
   width: 30%;
@@ -76,6 +82,7 @@
 
 .bottom-container {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   flex-direction: column;
   width: auto;
@@ -87,7 +94,8 @@
 }
 
 .jpg-img {
-  padding: 100px;
+  display: flex;
+  justify-content: center;
 }
 
 
@@ -121,12 +129,30 @@
 
 
 /* Mobile Styles */
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 600px) {
+
+  .top-container {
+
+  }
+  .inspo p {
+    font-size: 7px;
+  }
+  .suggestions p {
+    font-size: 8px;
+  }
+  .thoughtstream p {
+    font-size: 7px;
+  }
+
 
 }
 
 /* Tablet Styles */
 @media only screen and (min-width: 401px) and (max-width: 960px) {
+  .spark-page {
+    background-color: #f8edeb;
+  }
+
 }
 
 
